Fix hidden header on mobile devices

--- a/NearbyRestaurantsMap/css/style.css
+++ b/NearbyRestaurantsMap/css/style.css
@@ -18,15 +18,8 @@ html,body {
 }
 
 #fixed-header h1{
-  margin-top: 5px;
-}
-
-@media only screen
-  and (max-device-width: 350px) {
-    #fixed-header h1{
-      font-size: 150%;
-      margin-top: 8px;
-    }
+  font-size: 150%;
+  margin-top: 8px;
 }
 
 .container {
